--- a/pages/templates/index.html
+++ b/pages/templates/index.html
@@ -11,10 +11,32 @@
     <h1>Home</h1>
     <p>Welcome to the home page</p>
 
-    <p><hr>and this is second line to p</p>
+    <form method="post" id="form">
+        {% csrf_token %}
+        {{form.as_p}}
+        <button type="submit">submit</button>
+    </form>
 
     <script>
+        const form = document.getElementById('form');
+        form.addEventListener("submit", sumbmitHandler);
 
+        function sumbmitHandler(e){
+            e.preventDefault();
+            fetch(form.action, {method: 'POST', body: new FormData(form)})
+            .then(response=>response.json())
+            .then(data=>{
+                if (data.message === 'success'){
+                    alert('Success!');
+                    form.reset()
+                }
+            })
+        }
+        fetch('http://127.0.0.1:8000/product')
+        .then(response => response.json())
+        .then(data => {
+            console.log(data)
+        })
     </script>
 </body>
 </html>
